@@ -2,6 +2,8 @@ update-manager (1:0.87.26) hardy-proposed; urgency=low
 
   * DistUpgrade/DistUpgradeController.py:
     - run in server mode on a server CD (LP: #222895)
+    - deal with the landscape.canonical.com repository
+      (LP: #224308)
   * DistUpgrade/DistUpradeCache.py:
     - make the code more robust against unavailable
       package records (LP: #223619)
